--- a/courses/dl1/lesson1.ipynb
+++ b/courses/dl1/lesson1.ipynb
@@ -17,6 +17,16 @@
   "cells": [
     {
       "metadata": {
+        "id": "T5sYCfRp_oTj",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Welcome to the first week of the second deep learning certificate! We're going to use convolutional neural networks (CNNs) to allow our computer to see - something that is only possible thanks to deep learning."
+      ]
+    },
+    {
+      "metadata": {
         "id": "iF1e-gOM_oTf",
         "colab_type": "text"
       },
@@ -27,12 +37,12 @@
     },
     {
       "metadata": {
-        "id": "T5sYCfRp_oTj",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "lwJCOX6QCmi4"
       },
       "cell_type": "markdown",
       "source": [
-        "Welcome to the first week of the second deep learning certificate! We're going to use convolutional neural networks (CNNs) to allow our computer to see - something that is only possible thanks to deep learning."
+        ""
       ]
     },
     {
@@ -85,36 +95,16 @@
       "metadata": {
         "id": "QlT-tGZn_oTq",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 350
-        },
-        "outputId": "5fa9731f-a40b-4ddf-a78a-0dddfe1086d7"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "# This file contains all the main external libs we'll use\n",
-        "from fastai.imports import *\n",
-        "\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
+        "#!pip install fastai\n",
+        "from fastai.imports import *"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-97690363c66b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mfastai\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimports\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/gdrive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fastai'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
